--- a/stek_queue/stek_queue/stek_queue.csproj
+++ b/stek_queue/stek_queue/stek_queue.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frontier.cs" />
     <Compile Include="settings.cs" />
     <Compile Include="Stek.cs" />
     <Compile Include="Program.cs" />
